# czechitas-ai-data

./: .env.sample  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-slides.yml
docs/superpowers/plans/: 2026-05-12-assignment-03c-task-4.md  2026-05-12-datacorp-dataset-expansion.md  2026-05-12-results-branch-update.md
docs/superpowers/specs/: 2026-05-12-assignment-03c-task-4-design.md  2026-05-12-datacorp-dataset-expansion-design.md  2026-05-12-datacorp-dataset-expansion-parking-lot.md  2026-05-12-results-branch-update-design.md
notebooks/: assignment-03-solution.ipynb  assignment-03.ipynb  assignment-03b-solution.ipynb  assignment-03b.ipynb  assignment-03c.ipynb  datacorp-answer-key.md  datacorp.csv  datacorp_exit_interviews.csv  datacorp_org_chart.csv  datacorp_payroll_q3.xlsx  datacorp_reviews.csv  datacorp_salary_history.csv  datacorp_tickets.csv  guardian_100.csv
scripts/: generate_datacorp.py
slides/: package-lock.json  package.json  s0-intro.md  s0-teorie.md  s1-zadani.md  s2-data.md  s3-priprava.md  s3a-python.md  s4-analyza.md  s5-prezentace.md  s6-bonus.md  slides.md
slides/theme/layouts/: cover.vue
slides/theme/styles/: index.css
tests/: test_generate_datacorp.py
utils/custom_gpt_crawl/: README.md  __init__.py  crawl_and_scrape.py
