[project]
name = "czechitas-ai-data"
version = "0.1.0"
description = "Czechitas: AI v datové analýze - cvičení"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.4",
    "instructor>=1.7.2",
    "ipykernel>=6.29.5",
    "openai>=1.65.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
scrape = [
    "firecrawl-py>=1.13.5",
    "typer>=0.15.2",
]
